- Fixes button colors for light and dark modes for navbar options and custom home page buttons. - Fixes issue with breadcrumbs and website url for blog posts.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,8 @@
 :root {
-  --grey-btn: #2c2f33;
+  --grey-btn: #36393e; /* Discord dark mode hex color */
+  --grey-text: #adb5bd;
   --white: #ffffff;
+  --hover-color: #343a40;
 }
 
 /* Custom home content styles */
@@ -16,7 +18,7 @@
 .animate-content {
   opacity: 0;
   transform: translateX(-5%);
-  transition: opacity .5s ease-in-out, transform .5s ease-in-out;
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
 
 .animate-content.visible {
@@ -30,4 +32,20 @@
   height: auto;
   max-height: 200px; /* Adjust the max-height as needed */
   object-fit: fit;
+}
+
+/* Navbar settings for dark mode */
+html[data-mode='dark'] nav .nav-item .nav-link.active {
+  background-color: var(--grey-btn) !important;
+}
+
+/* Home page settings for dark mode */
+html[data-mode='dark'] header .description .desc-btns > * {
+  background-color: var(--grey-btn) !important;
+  color: var(--grey-text);
+  border: none;
+}
+
+html[data-mode='dark'] header .description .desc-btns > *:hover {
+  background-color: var(--hover-color) !important;
 }
